####### FTGL
PROJECT(FTGL)

FILE(GLOB FTGL_SOURCES ${FTGL_DIR}/src/*.cpp)
FILE(GLOB FTGL_SOURCES_FONT ${FTGL_DIR}/src/FTFont/*.cpp)
FILE(GLOB FTGL_SOURCES_GL ${FTGL_DIR}/src/FTGL/*.cpp)
FILE(GLOB FTGL_SOURCES_GLYPH ${FTGL_DIR}/src/FTGlyph/*.cpp)
FILE(GLOB FTGL_SOURCES_LAYOUT ${FTGL_DIR}/src/FTLayout/*.cpp)

INCLUDE_DIRECTORIES(${FT_DIR}/include)
INCLUDE_DIRECTORIES(${FT_DIR})
INCLUDE_DIRECTORIES(${FTGL_DIR}/msvc)
INCLUDE_DIRECTORIES(${FTGL_DIR}/src)

ADD_DEFINITIONS(-DFTGL_LIBRARY)
LINK_LIBRARIES("opengl32" glu32)
LINK_LIBRARIES(freetype)

ADD_LIBRARY(FTGL SHARED ${FTGL_SOURCES} ${FTGL_SOURCES_FONT} ${FTGL_SOURCES_GL} ${FTGL_SOURCES_GLYPH} ${FTGL_SOURCES_LAYOUT})

FILE(GLOB_RECURSE ftgl_headers ${FTGL_DIR}/src/*.h)
INSTALL(FILES ${ftgl_headers} DESTINATION ${INSTALL_DIR}/include/FTGL/FTGL )


INSTALL(TARGETS FTGL
		ARCHIVE DESTINATION  "${INSTALL_DIR_BITS}/lib/" CONFIGURATIONS "RelWithDebInfo"
		LIBRARY DESTINATION  "${INSTALL_DIR_BITS}/lib/" CONFIGURATIONS "RelWithDebInfo"
		RUNTIME DESTINATION  "${INSTALL_DIR_BITS}/bin/" CONFIGURATIONS "RelWithDebInfo"
		)
		
INSTALL(TARGETS FTGL
		ARCHIVE DESTINATION  "${INSTALL_DIR_BITS}/libd/" CONFIGURATIONS "Debug"
		LIBRARY DESTINATION  "${INSTALL_DIR_BITS}/libd/" CONFIGURATIONS "Debug"
		RUNTIME DESTINATION  "${INSTALL_DIR_BITS}/bind/"  CONFIGURATIONS "Debug"
		)