####### GL2PS
PROJECT(GL2PS)
ADD_DEFINITIONS("-DGL2PSDLL")
ADD_DEFINITIONS("-DGL2PSDLL_EXPORTS")
ADD_DEFINITIONS("-D_USE_MATH_DEFINES")
LINK_LIBRARIES("opengl32")
ADD_LIBRARY (gl2ps SHARED ${GL2PS_DIR}/gl2ps.c)

MESSAGE(${INSTALL_DIR})
INSTALL(TARGETS gl2ps 
		ARCHIVE DESTINATION "${INSTALL_DIR}/lib/"
		LIBRARY DESTINATION "${INSTALL_DIR}/lib/"
		RUNTIME DESTINATION "${INSTALL_DIR}/bin/"  
		)